base/chisel/chisel.yaml
apiVersion: v1
kind: Service
metadata:
  name: chisel
  namespace: chisel
spec:
  ports:
  - port: 80
    targetPort: 8443
  selector:
    app: chisel
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chisel
  namespace: chisel
spec:
  selector:
    matchLabels:
      app: chisel
  replicas: 3
  template:
    metadata:
      labels:
        app: chisel
    spec:
      containers:
      - name: chisel
        image: jpillora/chisel
        command: ["/app/chisel", "$(TYPE)", "-v", "-p", "$(PORT)", "--proxy", "$(PROXY)", "--socks5"]
        ports:
        - containerPort: 8443
